blog: add pictures and fix typos to ironman article

--- a/_posts/2021-06-13-im-cairns.markdown
+++ b/_posts/2021-06-13-im-cairns.markdown
@@ -1,5 +1,5 @@
 ---
-title: "Ironman Cairns"
+title: "Cairns : mon premier Ironman"
 layout: post
 headerImage: false
 category: blog
@@ -7,160 +7,229 @@ author: Mathieu
 description: Ironman CairnsRace Report
 ---
 
-Cairn est une destination de vacances sous les cocotiers. La ville se situe complètement au nord de l’Australie. Il y fait chaud (26 degrés, ressenti 28) mais surtout humide (~80%). Particularité de la destination: la Daintree Forest, la plus vieille foret du monde, y rencontre la Grande Barrière de Corail: deux sites cote a cote au patrimoine mondial de l’UNESCO.
+## Préparatifs
+
+Cairn est une destination de vacances sous les cocotiers. La ville se situe complètement au nord de l’Australie. Il y fait chaud (26 degrés, ressenti 28) mais surtout humide (~80%). Particularité de la destination: la Daintree Forest, la plus vieille foret du monde, y rencontre la Grande Barrière de Corail: deux sites côte à côte au patrimoine mondial de l’UNESCO.
+
 
 Mais pour certains, ce n’est pas encore l’heure des vacances.
 
-Nous arrivons le jeudi soir, suffisamment longtemps avant la course pour prévenir les imprévus. C’était finalement une très bonne idée car la logistique de course est bien plus complexe que sur les autres courses que j’ai pu faire cette année.
+Nous arrivons le jeudi soir, suffisamment longtemps avant la course pour prévenir les imprévus. C’était finalement une bonne idée car la logistique de course est bien plus complexe que sur les autres courses que j’ai pû faire cette année.
 
-Dès l’aéroport, on repère les athletes de loin: profil ultra fit, sac a vélo, sac a dos ou casquette Ironman, montres et lunettes de sport sont de sortis. Le triathlete soigne son look; et j’entre dans l’ambiance.
+Dès l’aéroport, on repère les athlètes de loin: profil ultra fit, sac a vélo, sac a dos ou casquette Ironman, montres et lunettes de sport sont de sortis. Le triathlete soigne son look; et j’entre dans l’ambiance.
 
-Le vendredi, j’apporte mon vélo a l’atelier pour une dernière verification. La encore, c’était une bonne idée car le frein arrière a un soucis. Les patins avants sont aussi changés. Et mon vélo reçoit en bonus un jolie coup de chiffon.
+Le vendredi, j’apporte mon vélo à l’atelier pour une dernière vérification. Là encore, c’était une bonne idée car le frein arrière a un soucis. Les patins avants sont aussi changés. Et mon vélo reçoit en bonus un jolie coup de chiffon.
 
-Je fais ensuite mon athlete check-in et y reçois mes sacs de transitions, dossard et stickers pour la course. On fait un saut rapide au stand de merchandising. Laura y trouve un t-shirt “Ironman Support Crew” et moi la casquette et t-shirt de la course où est inscris au dos le nom de tous les athlètes. J’aperçois mon nom: I’m part of the gang!
+Je fais ensuite mon athlete check-in et y reçois mes sacs de transitions, dossard et stickers pour la course.
 
-Samedi, c’est la veille de course. Je profite de la piscine de l’hotel pour nager une vingtaine de minute au réveil. Je me sens bien, j’ai vraiment trop hâte.
+![check-in](/assets/ironman/checkin.jpg)
 
-Je fais ensuite le tour de T2 (Transition 2: vélo -> course a pied) sur Cairns pour me familiariser avec les lieux J’y depose mon sac rouge. 
+On fait un saut rapide au stand de merchandising. Laura y trouve un t-shirt “Ironman Support Crew” et moi la casquette et t-shirt de la course où est inscris au dos le nom de tous les athlètes. J’aperçois mon nom: *I’m part of the gang*!
 
-Je rejoins ensuite Julian, un ami du club, pour rouler ensemble jusqu’a Palm Cove. Dernière repetition et verification du vélo. La route est en super condition et on a le vent dans le dos. On y arrive rapidement.
+Le soir, je découvre une magnifique vidéo pleine d'encouragements de toute ma famille. Merci <3 !! Impossible de ne pas terminer maintenant.
 
-Le depart de la course se situe la-bas, à une trentaine de kilometres au nord de Cairns.
+## Samedi: J-1
 
-La raison est qu’il y a moins de crocodiles. Dans le nord du Queensland, les crocodiles courent, grimpent (un peu) et nagent en mer. Contrairement aux requins qui croquent les humains souvent par erreur, les crocodiles de mer, les “salties”, nous considèrent bien comme des proies. On va essayer d’y faire abstraction…
+Samedi, veille de la course. Je profite de la piscine de l’hotel pour nager une vingtaine de minute au réveil. Je me sens bien, j’ai vraiment trop hâte.
+
+Je fais ensuite le tour de T2 (Transition 2: vélo -> course à pied) sur Cairns pour me familiariser avec les lieux J’y dépose mon sac rouge.
+
+Je rejoins ensuite Julian, un ami du club, pour rouler ensemble jusqu’à Palm Cove. Dernière répétition et vérification du vélo. La route est en super condition et on a le vent dans le dos. On y arrive rapidement.
+
+La course commence la-bas, à une trentaine de kilomètres au nord de Cairns.
+
+La raison est qu’il y a moins de crocodiles. Dans le nord du Queensland, les crocodiles courent, grimpent (un peu) mais surtout nagent en mer et jusqu'à plusieurs kilomètres des côtes. Contrairement aux requins, qui croquent les humains souvent par erreur, les crocodiles de mer, les “salties”, nous considèrent bien comme des proies. On va essayer d’y faire abstraction…
+
+{:refdef: style="text-align: center;"}
+![Warning](/assets/ironman/croc.jpg){: width="450" }
+{:refdef}
+
 
 Petit tour de T1 (Transition 1: nage -> vélo) et dépôt du sac bleu.
 
-La mer est agitée, “it’s a washing machine” comme me dit une locale. On espère que ca ira demain. Les bouées sont deja sorties. La distance ne me parait pas si effrayante, j’ai juste un doute avec les conditions: c’est très très “choppy”. 
+La mer est agitée, *“it’s a washing machine”* comme me dit une locale. On espère que ca ira demain. Les bouées sont déjà sorties. La distance ne me parait pas si effrayante, j’ai juste un doute avec les conditions: c’est très très *“choppy”*.
 
-On avale un bol de pates avec nos copines puis on rentre avec la navette sur Cairns. 
+On avale un bol de pâtes avec nos copines puis on rentre avec la navette sur Cairns.
 
-Dernière étape pour moi: arrêt au stand massage mis en place par les organisateurs. Y a rien a dire, l’organisation est plus que nickel. Soin au mollet et strap du pied. Plus qu’a croiser les doigts pour que ma tendinite ne se réveille pas, il va falloir que ca tienne maintenant ! 
+Dernière étape pour moi: arrêt au stand massage mis en place par les organisateurs. Y a rien a dire, l’organisation est plus que nickel. Soin au mollet et strap du pied. Plus qu’à croiser les doigts pour que ma tendinite ne se réveille pas, il va falloir que ça tienne maintenant !
 
-Dernier bol de pates a l’hotel, avec quelques legumes, pour faire le plein de “carbs”. Extinction des feux a 20h30. J’ai du mal a m’endormir mais je sais que ce n’est finalement pas si grave. Le réveil sonne vers 3h40 et ma montre indique 5h20 de sommeil, c’est suffisant et surtout beaucoup mieux qu’avant le sommet du Kilimanjaro où je n’avais pas réussi a dormir avant 12h d’effort. J’apprend de mes erreurs.
+Dernier repas de pâtes à l’hôtel, avec quelques légumes, pour faire le plein de “carbs”. Extinction des feux à 20h30. J’ai du mal à m’endormir mais je sais que ce n’est finalement pas si grave.
 
-Apres un rapide petit déj’, on monte dans la navette pour Palm Cove. Il fait nuit noire. Personne ne parle. J’essaie de me reposer un peu, de ne pas réfléchir. J’ai confiance en mes capacités a terminer la course, le seul doute subsiste sur la logistique et la peur d’oublier quelque chose d’essentiel dans un des sacs. De toutes manières, c’est trop tard maintenant, on n’a plus accès à rien.
+## Jour de course
+
+Le réveil sonne vers 3h40 et ma montre indique 5h18 de sommeil, c’est suffisant et surtout beaucoup mieux qu’avant le sommet du Kilimanjaro où je n’avais pas réussi à dormir avant les 12h d’effort qui m'attendaient. J’apprend de mes erreurs.
+
+Après un rapide petit déj’, on monte dans la navette pour Palm Cove. Il fait nuit noire. Personne ne parle. J’essaie de me reposer un peu, de ne pas réfléchir. J’ai confiance en mes capacités à terminer la course, le seul doute subsiste sur la logistique et la peur d’oublier quelque chose d’essentiel dans un des sacs. De toute manière, c’est trop tard maintenant, on n’a plus accès aux sacs de transition.
+
+![sunrise](/assets/ironman/sunrise.jpg)
 
 En arrivant, je gonfle les pneus de mon vélo et installe mon hydratation. Je vais utiliser du Gatorade Lemon, que j’ai utilisé toute l’année. Coup de chance, c’est aussi ce qui est donné aux ravitaillements sur la course.
 
 Une heure avant l’Ironman, c’est le départ du 70.3, le semi-Ironman. Ils utilisent le même parcours avec des boucles en moins sur chacune des étapes. Dans le même temps, le soleil se lève a l’horizon. C’est beau. La mer est plutôt calme. J’ai vraiment trop hâte.
 
-Dernier bisou, dernière photo. Je rentre dans mon sas. 
+Dernier bisou, dernière photo. Je rentre dans mon sas.
+
+![start](/assets/ironman/start.jpg)
 
 Je me suis mis dans la vague numéro 2 avec un temps de nage estimé entre 1h07 et 1h14. Mon objectif est de faire 1h10 tranquillement sans trop me fatiguer.
 
+Repéré à mon bracelet “I Will Become One” donné aux first-timers, le présentateur me sert la main et me souhaite bonne chance. La musique *“I gotta feeling”* des Black Eyed Peas résonne. Oui, *“tonight’s gonna be a good night”*.
 
-Repéré à mon bracelet “I Will Become One” donné aux first-timers, le présentateur me sert la main et me souhaite bonne chance. La musique “I got a feeling” de Black Eyed Peas résonne. Oui, “tonight’s gonna be a good night”. 
+## 1ère étape : Nage - 3800m
 
-7h40, Le coup d’envoi est donné pour les pros.
+7h40: le coup d’envoi est donné pour les pros.
 
-On part ensuite 2 part 2 deux. Ce n’est pas plat du tout mais ce n’est pas non plus trop mauvais. L’eau est chaude: 25 degrés et la combinaison est optionnelle. Elle reste cependant conseillée à cause des méduses. On ne voit absolument rien sous l’eau, c’est tout marron. J’évite de penser à ce qui vit autour de nous.
-
+On part ensuite deux par deux. Ce n’est pas plat du tout mais ce n’est pas non plus trop mauvais. L’eau est chaude: 25 degrés et la combinaison est optionnelle. Elle reste cependant conseillée à cause des méduses. On ne voit absolument rien sous l’eau, c’est tout marron. J’évite de penser à ce qui vit autour de nous.
 
 Il faut aussi faire attention aux coups de coudes et coups de pieds des autres.
 
-J’ai l’habitue de nager en mer et j’arrive à rester calme. Je me force ensuite à nager en 3 temps,  sans utiliser les jambes pour les conserver pour la suite. Ça va de mieux en mieux.
+J’ai l’habitue de nager en mer et j’arrive à rester calme. Je me force ensuite à nager en 3 temps, sans utiliser les jambes pour les conserver pour la suite. Ça va de mieux en mieux.
 
-J’accélère légèrement sur les 500 derniers metres, pour finir en beauté, par gourmandise aussi.
+J’accélère légèrement sur les 500 derniers mètres, pour finir en beauté, par gourmandise aussi.
 
 Je termine finalement en 1h06, mieux qu’espéré.
 
-La prochaine fois, je partirai sûrement à la fin de la 1er vague pour éviter de devoir dépasser trop de monde. Cela me permettra aussi d’essayer de suivre un autre nageur plus rapide pour rester dans sa trainée et bénéficier d’un peu plus de drafting.
+![swim](/assets/ironman/swim.jpg)
+
+La prochaine fois, je partirai sûrement à la fin de la première vague pour éviter de devoir dépasser trop de monde. Cela me permettra aussi d’essayer de suivre un autre nageur plus rapide pour rester dans sa trainée et bénéficier d’un peu plus de l'effet de drafting.
 
 Je pense que mon rythme cardiaque était aussi un peu trop rapide et je devrais être un peu plus patient la prochaine fois quand il s’agira de dépasser les autres. Et peut-être que cette dernière accélération n’était finalement pas nécessaire.
 
+{:refdef: style="text-align: center;"}
+![swim stats](/assets/ironman/swimstats.jpg){: width="450" }
+{:refdef}
+{:refdef: style="text-align: center;"}
+*Le rythme cardiaque augmente sur la fin. On voit aussi bien l'effet du courant sur la vitesse sur le dernier graphe.*
+{:refdef}
 
-Je passe quelques secondes sous la douche à la sortie de l’eau pour enlever le sel sur mon visage. J’attrape mon sac de transition et file sous la tente. J’y croise Julian qui a fini sa nage en 1h08 et qui file plus vite que moi vers son vélo. Je prends le temps de mettre de la crème solaire. J’ai vu de mauvaises images de brulures et je pense que ça vaut le coup de ne pas se presser. Je prends ma 1er capsule de sel.
+## Transition 1 : en selle
 
-Je sors de ma transition en 9 minutes. C’est 3 minutes de trop mais j’avais décidé de ne pas me mettre de pression là-dessus. 
+Je passe quelques secondes sous la douche à la sortie de l’eau pour enlever le sel sur mon visage. J’attrape mon sac de transition et file sous la tente. J’y croise Julian qui a fini sa nage en 1h08 et qui file plus vite que moi vers son vélo. Je prends le temps de mettre de la crème solaire. J’ai vu de mauvaises images de brulures et je pense que ça vaut le coup de faire ça bien. Je prends ma 1er capsule de sel.
 
-Je file vers Port Douglas, le vent dans le dos. Je vais vite, sans forcer. La route est toujours de très bonne qualité, neuve, sans friction. Les paysages sont superbes. Je prends le temps de souffler et je réalise : “j’y suis, je suis en train de faire un Ironman. Profite !!”. Petit moment de bonheur.
+Je sors de ma transition en 9 minutes. C’est 3 minutes de trop mais j’avais décidé de ne pas me mettre de pression là-dessus.
 
-Il y a quelques collines le long de la route mais rien de bien méchant. Il ne fait pas encore très chaud. Je me cale sur mes aéros-barres et profite de la vue. Au bout de 30 minutes, je prends ma 2ème capsule de sel et j’avale plusieurs Clifs Barres (brownie au chocolat et beurre de cacahuète, mes préférées) à 45 minutes d’intervalle. Comme à l’entrainement. Je bois aussi beaucoup, surtout avec ce climat tropical.
+## 2ème étape: Vélo - 180km
+
+Je file vers le nord direction Port Douglas, le vent dans le dos. Je vais vite, sans forcer. La route est toujours de très bonne qualité, neuve, sans friction. Les paysages sont superbes. Je prends le temps de souffler et je réalise : *“j’y suis, je suis en train de faire un Ironman. Profite !!”*. Petit moment de bonheur.
+
+Il y a quelques collines le long de la route mais rien de bien méchant. Il ne fait pas encore très chaud. Je me cale sur mes aéros-barres et profite de la vue. Au bout de 30 minutes, je prends ma 2ème capsule de sel et j’avale plusieurs Clifs Barres (brownie au chocolat et beurre de cacahuète, mes préférées) à 45 minutes d’intervalle, comme à l’entrainement. Je bois aussi beaucoup, surtout par peur de désyhdratation avec ce climat.
 
 La route côtière fait ensuite place aux champs de canne à sucre et enfin aux hôtels luxueux de Port Douglas. Il me reste une boucle entre Palm Cove et Port Douglas avant de revenir sur Cairns.
 
+![bike](/assets/ironman/bike.jpg)
+{:refdef: style="text-align: center;"}
+*Un Ironman sur un vélo Decathlon...*
+{:refdef}
+
 Cette fois, le vent est définitivement levé (28km/h) et est de face. Je sais qu’il va falloir tenir la position aéro, me concentrer sur mes watts et essayer de ne pas regarder ma vitesse. Mon temps reste cohérent avec mon objectif et ma perte de vitesse sur le retour est compensé par ma bonne vitesse à l’aller, le vent dans le dos.
+
 Au bout de 2 heures, je commence à avoir mal au ventre. J’ai du mal à rester le ventre compressé sur mes aéro-barres. Je me demande: d’où est-ce que ça peut venir ? La seule différence avec l’entrainement est la quantité de sel que je prends: j’ai multiplié ma dose par 4 avec les capsules.
 
 Tous les liquides que je bois me restent dans le ventre.
 
-
 J’apprends plus tard que cela peut être dû à la qualité de l’eau servie aux ravitaillements.
-
 
 Avec ce vent, ne pas pouvoir se coucher sur le vélo est un véritable cauchemar pour ma performance et ma vitesse descend drastiquement.
 
-
 Il me reste 4 heures avant de revenir sur Cairns, ça va être long. Je sais que les ravitaillements sur la course à pied donnent du coca: il va falloir tenir jusque là.
 
-Je me calme sur le sel et j’arrête les barres pour passer aux gels. Ça ne passe toujours pas. 
+Je me calme sur le sel et j’arrête les barres pour passer aux gels. Ça ne passe toujours pas.
 
-Sur la montée vers Rex Lookout, je dépasse un cycliste qui a décidé de pousser son vélo à pied. “Courage, la journée va être longue pour lui”, me dis-je. 
+{:refdef: style="text-align: center;"}
+![bike stats](/assets/ironman/bikestats.jpg){: width="450" }
+{:refdef}
+{:refdef: style="text-align: center;"}
+*Deux boucles Palm Cove - Port Douglas avant de revenir sur Cairns. Mes watts sont faibles par rapport à mon rythme cardiaque. Dans le dernier graphe, Garmin me dit bien que ma condition est inférieure à d'habitude: quelque chose ne va pas.*
+{:refdef}
 
-Je sens autre cycliste dans mon dos rester bien proche de moi, avant de recevoir un avertissement oral donné par un officiel sur son scooter: le drafting est illégal. Au final, ça n’a pas trop d’importance, je ne me bats pas pour une qualifications pour Kona.
+Sur la montée vers Rex Lookout, je dépasse un cycliste qui a décidé de pousser son vélo à pied. *“Courage, la journée va être longue pour lui”*, me dis-je.
+
+Je sens un autre cycliste dans mon dos rester bien proche de moi, avant de recevoir un avertissement oral donné par un officiel sur son scooter: le drafting est illégal. Au final, ça n’a pas trop d’importance, je ne me bats pas pour une qualifications pour Kona.
 
 Avec ce vent, il faut comprendre qu’il est difficile de doubler rapidement et on se retrouve souvent proche les uns des autres sans vouloir dépasser ou lever le pied pour augmenter l’écart aux 12 metres réglementaires.
 
-
 Tout va mal en somme. Je suis résigné: tant pis pour l’objectif de moins de 12h, la priorité est désormais de terminer le mieux possible.
 
-Au bout de 150km, je passe enfin Palm Cove. J’entre dans la dernière heure pour revenir sur l’esplanade de Cairns. Il n’y a plus de collines, la zone est urbaine, à découvert. Ma vitesse autour 23km/h fait peine à voir. Je commence à prendre des gels cafféinés.
+Au bout de 150km, je passe enfin Palm Cove. J’entre dans la dernière heure pour revenir sur l’esplanade de Cairns. Il n’y a plus de collines, la zone est urbaine, à découvert. Ma vitesse autour 23km/h fait peine à voir. Je commence à prendre des gels cafféinés, espérant que ça me booste un peu.
 
-J’arrive enfin sur Cairns au bout de 6h30, tout juste. C’est 30 minutes de plus que mon objectif. Tant pis. Je pose mon vélo et fait un tour obligatoire au petit coin. Je change de chaussures, remets de la crème solaire et pose ma visière. 12 minutes de transition c’est là encore beaucoup trop long, mais il fallait bien ça.
+J’arrive enfin sur Cairns au bout de 6h30, tout juste. C’est 30 minutes de plus que mon objectif. Tant pis.
 
+## Transition 2 : la renaissance
 
+Je pose mon vélo et fait un tour obligatoire au petit coin. J'évite aussi de courir avec mes chaussures de vélo, par précaution.
 
-Je croise Laura et Holly, c’est bon pour le moral ! Quelques minutes plus tard j’arrive enfin à la première station de ravitaillement et me jette sur le coca. Le mal de ventre passe enfin.
+Je change de chaussures, remets de la crème solaire et pose ma visière. Pas de coca sur la transition, je vais devoir patienter encore un peu.
 
+12 minutes de transition c’est là encore beaucoup trop long, mais il fallait bien ça.
 
+## 3ème étape : Course à pied - 42.2km
+
+Je croise Laura et Holly, la copine de Julian, dès la sortie de T2, c’est bon pour le moral !
+
+Quelques minutes plus tard j’arrive enfin à la première station de ravitaillement et me jette sur le coca. Deux verres et 10 minutes plus tard, le mal de ventre passe enfin.
 
 Le marathon se passe sur l’esplanade de Cairns avec 4 boucles de 10.5km. On court au milieu de tous les restaurants et du monde qui fait la fête. En réalité, ça ne me dérange pas, je suis dans ma bulle.
 
-
 Mon plan sur la course à pied est simple: essayer de tenir 5:40min/km et marcher les ravitaillements pour pouvoir me mettre de l’eau sur la tête, boire une gorgée de coca et une d’electrolytes. Une technique pour les débutants sur longue distance mais qui s’avère être la bonne.
 
-
+{:refdef: style="text-align: center;"}
+![run](/assets/ironman/run2.jpg){: width="450" }
+{:refdef}
 
 J’arrive à rester autour de cette vitesse sur les 19 premiers kilometres. Tout se passe bien, le ventre se rétablit et j’apprécie cette ambiance magnifique.
 
+Cette 3ème boucle, de 19 à 33km est bien longue: une traversée du désert où la foulée se fait difficile. Il fait maintenant nuit noire et la température est idéale.
 
+Mon pied tient bien et je ne trouve pas le temps trop long non plus. Mes seules pensées vont à ma nutrition et à des regards à ma montre.
 
-Cette 3ème boucle, de 19 à 33km est bien longue, une traversée du désert où la foulée se fait difficile. Il fait maintenant nuit noire.
+J’entend le public crier mon prénom (présent sur mon dossard) de temps à autre. Il y a quelques français dans la foule.
 
+A la sortie de cette 3ème boucle, je jette un oeil à ma montre: 11h25 et 10km restant. J’ai mon dernier objectif de la journée. Je décide de réduire mes arrêts aux ravitaillements. Ma montre me lâche autour de 37kms. Je sors mes deux derniers gels: mocha et double espresso, simplement pour assurer. Dans le fond, je sais que c'est dans la poche.
 
+{:refdef: style="text-align: center;"}
+![run stats](/assets/ironman/runstats.jpg){: width="450" }
+{:refdef}
+{:refdef: style="text-align: center;"}
+*On voit bien tous les arrêts "au stand". Mon rythme cardiaque est faible: c'est bien, est-ce que j'aurai dû aller un peu plus vite ?*
+{:refdef}
 
-Mon pied tient bien et je ne trouve pas le temps trop long non plus. J’entend le public crier mon prénom (présent sur mon dossard) de temps à autre. Il y a quelques français dans la foule.
+## L'arrivée
 
+Je repère enfin le panneau 42km: c’est l’heure d’apprécier le moment. *Je l’ai fait !*
 
-
-A la sortie de cette 3ème boucle, je jette un oeil à ma montre: 11h25 et 10km restant. J’ai mon dernier objectif de la journée. Je décide de réduire mes arrêts aux ravitaillements. Ma montre me lâche autour de 37kms. Je sors mes deux derniers gels: mocha et double espresso. Rien ne peut m’arrêter ! 
-
-
-
-Quelques temps après, je vois le panneau 42km. C’est l’heure d’apprécier le moment. Je l’ai fait ! Dernier virage, j’arrive sur le tapis rouge. J’ai toujours le chrono dans un coin de ma tête et de toute manière je ne vois pas grand chose avec tous ces projecteurs. 
-
-
+Dernier virage, j’arrive sur le tapis rouge. J’ai toujours le chrono dans un coin de ma tête et de toute manière je ne vois pas grand chose avec tous ces projecteurs. Je suis dans mon monde.
 
 Je franchis finalement la ligne en 12h27 avec un marathon en 4h28.
 
+![finish](/assets/ironman/finish2.jpg)
+
+Mon nom, avec un étrange accent australien, est appelé au micro. *Done*.
+
+Ma médaille et ma serviette sur les épaules, j’entre dans la tente de récupération. Je m’assoie avec Mark, autre membre du club et j’avale une soupe avec du pain. Il y a un buffet et on est pris en charge. Mes jambes sont raides, j’ai dû mal à les plier. Entre l'adrénaline et la cafféine que je prends depuis presque 6h, je pète le feu.
+
+Je termine bien ce marathon, sans avoir marché (en dehors du plan), sans crampes, avec juste ce qu’il faut en réserve d’énergie. Il n’était pas bien rapide mais tout en maîtrise, en suivant les consignes.
+
+## It's a wrap
+
+Malheureusement, je n’ai pas atteins mon objectif de 12h pour ce 1er Ironman. Mon estomac et le vent m’ont causés trop de soucis. Je suis un peu déçu parce que je pense que j'en étais capable.
+
+Le coach m'avait prévenu que tout n'irait pas parfaitement bien et je pense que c'est souvent le cas sur des courses longue distance, que ça soit en trail ou en triathlon. Néanmoins, j’ai réussi à gérer ces moments de moins bien, à être patient et à suivre le plan pour bien terminer. Ayant commencé le triathlon il y a tout juste 8 mois, je peux être fier de ce résultat !
+
+Et maintenant ? J’ai l’intention d’affiner ma nutrition en passant un test de transpiration à la rentrée pour être plus précis dans mes dosages.
+
+Je vais aussi prioriser le renforcement musculaire pour réduire mes blessures qui m’ont beaucoup coûtées cette année.
+
+L’Ironman m’a demandé un énorme volume d’entraînement ces derniers mois et même si je meurs d'envie de re-signer pour une nouvelle course longue distance, je vais profiter de ma fitness pour faire quelques courses plus courtes, travailler mon vélo et mes transitions. J'ai le temps de revenir.
+
+Ironman 70.3 Western Sydney (un semi) arrive dans trois mois et je voudrai faire mieux qu'en Février dernier. Décidément, je n’en ai pas fini avec ce sport.
 
 
-Mon nom, avec un étrange accent australien, est appelé au micro. Done.
+## Remerciements
 
+Un grand merci au [Bondi Running and Triathlon Club](https://www.bratclub.com.au/), pour cette magnifique année.
 
+Merci à toute ma famille pour vos super messages d'avant, pendant et après course ! Ça m'a beaucoup touché.
 
-Ma médaille et ma serviette sur les épaules, j’entre dans la tente de récupération. Je m’assoie avec Mark, autre membre du club et j’avale une soupe avec du pain. Il y a un buffet et on est pris en charge. Mes jambes sont raides, j’ai dû mal à les plier. Mais peu importe, je l’ai fait !
+Et surtout un grand merci à mon Amour pour ton support tout au long de l'année et jusqu'à la ligne d'arrivée.
 
-
-
-Je termine bien ce marathon, sans avoir marché en dehors du plan, sans crampes, avec juste ce qu’il faut en reserve d’énergie. Il n’était pas bien rapide mais tout en maîtrise, en suivant les consignes.
-
-
-Malheureusement, je n’ai pas atteins mon objectif de 12h pour cet 1er Ironman. Mon estomac et le vent m’ont causé des soucis. Néanmoins, j’ai réussi à gérer ces moments de moins bien, à être patient et à suivre le plan pour bien le terminer. Ayant commencé le triathlon il y a 8 mois à peine, je vais me contenter de ce résultat.
-
-J’ai l’intention d’affiner ma nutrition en passant un test de transpiration à la rentrée pour être plus précis dans mon dosage.
-
-Je vais aussi prioriser le renforcement musculaire pour réduire mes blessures qui m’ont beaucoup coûtées cette année. L’Ironman m’a demandé un énorme volume d’entraînement ces derniers mois et même si j’ai déjà envie de re-signer pour une nouvelle course longue distance, je vais profiter de ma fitness pour faire quelques courses plus courtes, travailler mon vélo et mes transitions.
-
-Le semi Ironman de Sydney arrive dans 2 mois et demi. Décidément, je n’en ai pas fini avec ce sport.
+[Vimeo](https://vimeo.com/562577632)
